fdo#66215: sw: fix clicking on text above background fly

SwPageFrm::GetCrsrOfst() tries to compare the distance to the closest
text vs. fly but does not do it right because GetCharRect()
returns just a line of width 1 on the left edge of the character;
try to figure out the entire area covered by the character via 2 calls
to GetCrsrOfst(), which gives much better clickability.

(regression from e8fbe97900f13305b17015d9044993bde4adab36)

Change-Id: I825e86daf65692dfb962ad576772c5f543d02d19
(cherry picked from commit edd2db1c783bd571ff796a5298385cacc91877b9)
Reviewed-on: https://gerrit.libreoffice.org/5662
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>